// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`localizeRoutes > Route options resolver: routing disable > should be disabled routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "about",
    "path": "/about",
  },
]
`;

exports[`localizeRoutes > basic > should be localized routing 1`] = `
[
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "home___en",
    "path": "/en",
  },
  {
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "home___ja",
    "path": "/ja",
  },
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "about___en",
    "path": "/en/about",
  },
  {
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "about___ja",
    "path": "/ja/about",
  },
]
`;

exports[`localizeRoutes > has children > should be localized routing 1`] = `
[
  {
    "children": [
      {
        "i18n": {
          "en": undefined,
        },
        "locale": "en",
        "name": "user-profile___en",
        "path": "profile",
      },
      {
        "i18n": {
          "en": undefined,
        },
        "locale": "en",
        "name": "user-posts___en",
        "path": "posts",
      },
    ],
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "user___en",
    "path": "/en/user/:id",
  },
  {
    "children": [
      {
        "i18n": {
          "ja": undefined,
        },
        "locale": "ja",
        "name": "user-profile___ja",
        "path": "profile",
      },
      {
        "i18n": {
          "ja": undefined,
        },
        "locale": "ja",
        "name": "user-posts___ja",
        "path": "posts",
      },
    ],
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "user___ja",
    "path": "/ja/user/:id",
  },
]
`;

exports[`localizeRoutes > route name separator > should be localized routing 1`] = `
[
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "home__en",
    "path": "/en",
  },
  {
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "home__ja",
    "path": "/ja",
  },
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "about__en",
    "path": "/en/about",
  },
  {
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "about__ja",
    "path": "/ja/about",
  },
]
`;

exports[`localizeRoutes > strategy: "no_prefix" > should be localized routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "about",
    "path": "/about",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix" > should be localized routing 1`] = `
[
  {
    "locale": "en",
    "name": "home",
    "path": "/",
  },
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "home___en",
    "path": "/en",
  },
  {
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "home___ja",
    "path": "/ja",
  },
  {
    "locale": "en",
    "name": "about",
    "path": "/about",
  },
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "about___en",
    "path": "/en/about",
  },
  {
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "about___ja",
    "path": "/ja/about",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix_and_default" > should be localized routing 1`] = `
[
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "home___en___default",
    "path": "/",
  },
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "home___en",
    "path": "/en",
  },
  {
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "home___ja",
    "path": "/ja",
  },
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "about___en___default",
    "path": "/about",
  },
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "about___en",
    "path": "/en/about",
  },
  {
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "about___ja",
    "path": "/ja/about",
  },
  {
    "children": [
      {
        "i18n": {
          "en": undefined,
        },
        "locale": "en",
        "name": "user-profile___en___default",
        "path": "profile",
      },
      {
        "i18n": {
          "en": undefined,
        },
        "locale": "en",
        "name": "user-posts___en___default",
        "path": "posts",
      },
    ],
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "user___en___default",
    "path": "/user/:id",
  },
  {
    "children": [
      {
        "i18n": {
          "en": undefined,
        },
        "locale": "en",
        "name": "user-profile___en",
        "path": "profile",
      },
      {
        "i18n": {
          "en": undefined,
        },
        "locale": "en",
        "name": "user-posts___en",
        "path": "posts",
      },
    ],
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "user___en",
    "path": "/en/user/:id",
  },
  {
    "children": [
      {
        "i18n": {
          "ja": undefined,
        },
        "locale": "ja",
        "name": "user-profile___ja",
        "path": "profile",
      },
      {
        "i18n": {
          "ja": undefined,
        },
        "locale": "ja",
        "name": "user-posts___ja",
        "path": "posts",
      },
    ],
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "user___ja",
    "path": "/ja/user/:id",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix_except_default" > should be localized routing 1`] = `
[
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "home___en",
    "path": "/",
  },
  {
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "home___ja",
    "path": "/ja",
  },
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "about___en",
    "path": "/about",
  },
  {
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "about___ja",
    "path": "/ja/about",
  },
]
`;

exports[`localizeRoutes > trailing slash > should be localized routing 1`] = `
[
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "home___en",
    "path": "/en/",
  },
  {
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "home___ja",
    "path": "/ja/",
  },
  {
    "i18n": {
      "en": undefined,
    },
    "locale": "en",
    "name": "about___en",
    "path": "/en/about/",
  },
  {
    "i18n": {
      "ja": undefined,
    },
    "locale": "ja",
    "name": "about___ja",
    "path": "/ja/about/",
  },
]
`;
